--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 :root{
     --fontPrincipal: 'Rubik', sans-serif;
     --corTextPrincipal: #393939;
+    --corPrimaria: #F1F0FA;
 }
 
 *{
@@ -12,4 +13,17 @@
     text-decoration: none;
     font-family: var(--fontPrincipal);
     color: var(--corTextPrincipal);
+    background-color: var(--corPrimaria);
+    list-style: none;
+}
+
+.logo-header{
+    width: 135px;
+}
+
+.nav-link{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 15px;
+    font-style: normal;
 }
