--- a/css/style.css
+++ b/css/style.css
@@ -33,11 +33,23 @@
 .nav-list{
     display: flex;
     flex-direction: row;
+    position: relative;
+    left: 2rem;
 }
 
 .nav-link{
     margin: 2rem;
     font-style: normal;
     font-weight: 400;
-    font-size: 16;
+    font-size: 16px;
+    transition: 2s all ;
+}
+
+.nav-link-active{
+    font-weight: 700;
+}
+
+.nav-link:hover{
+   
+   font-weight: 500;
 }
