--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-:root{
+:root {
     --fontPrincipal: 'Rubik', sans-serif;
     --corTextPrincipal: #393939;
     --corPrimaria: #ffffff;
+    --corRosa: #FFA7DE;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -18,14 +19,15 @@
     overflow-x: hidden;
 }
 
-.header{
+.header {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
 }
 
 
-.nav{
+.nav {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -33,25 +35,24 @@
     left: 4.8rem;
 }
 
-.logo-header{
+.logo-header {
     width: 135px;
     position: relative;
 }
 
-.nav-list{
+.nav-list {
     display: flex;
     flex-direction: row;
 }
 
-.nav-item{
-    margin: 2rem;
+.nav-item {
+    margin: 1.3rem;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
 }
 
-.input-search{
-    margin-left: 7rem;
+.input-search {
     background-color: #F1F0FA;
     border-radius: 6px;
     padding: 20px 55px;
@@ -59,7 +60,7 @@
     align-items: center;
 }
 
-.input{
+.input {
     border: none;
     background-color: transparent;
     outline: none;
@@ -69,46 +70,62 @@
     color: #616161;
 }
 
-.input::placeholder{
+.input::placeholder {
     color: #616161;
     font-size: 14px;
 }
 
-.input-icon{
+.input-icon {
     background: transparent;
     position: relative;
     top: 2px;
+    left: 30px;
     cursor: pointer;
 }
 
-.carrinho-compras{
+.container-icons {
     display: flex;
     align-items: center;
     position: relative;
-    left: 10rem;
+    right: 10em;
+}
+
+.carrinho-compras {
+    margin: 15px;
     cursor: pointer;
 }
 
-.perfil{
-    position: relative;
-    left: 11rem;
-    display: flex;
-    align-items: center;
-}
-
-.container-hr{
+.container-hr {
     display: grid;
     place-items: center;
 }
 
-.hr-header{
+.hr-header {
     width: 90%;
-    background-color: #F8F7FC;
+    border-color: #F8F7FC;
 }
 
-.banner{
+.banner {
     width: 100%;
 }
 
+.container-destaques{
+    display: grid;
+    place-items: center;
+    text-align: center;
+    margin: 5rem;
+}
 
+.titulo-destaque{
+    font-size: 26px;
+    font-weight: 600;
+    text-align: center;
+    color: #0f0f0f;
+}
+
+.container-card{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+}
 
