--- a/views/Produtos/index.html
+++ b/views/Produtos/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Produtos</title>
+    <title>Sabrina Modas | Produtos</title>
+    <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./../../css/produto.css">
+    <link href="/dist/output.css" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -55,6 +57,18 @@
 
     <main>
         
+        <div class="select-categoria">
+            <select class="select">
+                <option value="option1">Categorias</option>
+                <option value="option2">Conjuntos</option>
+                <option value="option3">Tênis</option>
+            </select>
+            <span class="custom-arrow"></span>
+        </div>
+
+
+
+
     </main>
 </body>
 </html>
