--- a/views/Produtos/index.html
+++ b/views/Produtos/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sabrina Modas | Produtos</title>
     <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./../../css/produto.css">
-    <link href="/dist/output.css" rel="stylesheet">
 </head>
+
 <body>
     <header class="header">
 
@@ -56,19 +57,26 @@
     </div>
 
     <main>
-        
+
         <div class="select-categoria">
-            <select class="select">
-                <option value="option1">Categorias</option>
-                <option value="option2">Conjuntos</option>
-                <option value="option3">Tênis</option>
-            </select>
-            <span class="custom-arrow"></span>
+
+            <div class="dropdown">
+                <button class="mainMenuBtn">CATEGORIAS
+                    <i>
+                        <img src="../../img/icon-categoria.png" class="icon-categoria">
+                    </i>
+                </button>
+                <div class="dropdown-child">
+                    <div class="dropdown-child--links">
+                        <a href="">Tênis</a>
+                        <a href="">Conjuntos</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
-
-
-
 
     </main>
 </body>
+
 </html>
