--- a/views/Produtos/index.html
+++ b/views/Produtos/index.html
@@ -58,7 +58,7 @@
 
     <main>
 
-        <div class="select-categoria">
+        <section class="select-categoria">
 
             <div class="dropdown">
                 <button class="mainMenuBtn">CATEGORIAS
@@ -68,15 +68,310 @@
                 </button>
                 <div class="dropdown-child">
                     <div class="dropdown-child--links">
-                        <a href="">Tênis</a>
-                        <a href="">Conjuntos</a>
+                        <a href="#tenis">Tênis</a>
+                        <a href="#conjunto">Conjuntos</a>
                     </div>
                 </div>
             </div>
 
-        </div>
+        </section>
+
+
+        <section class="container-produtos">
+
+            <div class="container-titulo">
+                <h2 class="titulo-produto">Tênis</h2>
+            </div>
+
+            <div class="categoria-produtos" id="tenis">
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto1.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto2.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto3.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto4.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto5.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto6.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto1.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto1.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+            </div>
+
+            <div class="container-titulo">
+                <h2 class="titulo-produto">Conjunto</h2>
+            </div>
+
+            <div class="categoria-produtos" id="conjunto">
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto1.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto2.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto3.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto4.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto5.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto6.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto1.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-img">
+                            <img class="img-card" src="../../img/produtos/produto1.png" alt="produto1">
+                        </div>
+                        <div class="card-descricao">
+                            <p class="descricao-card">Conjunto Planet Girls</p>
+                        </div>
+                        <div class="card-preco">
+                            <p class="preco-card">R$ 80,00</p>
+                        </div>
+                    </div>
+                    <button class="add-carrinho">Adicione</button>
+                </div>
+            </div>
+
+        </section>
 
     </main>
+
+    <footer class="footer">
+        <div class="footer--cabecalho">
+            <div class="footer--titulo-newsletter">
+                <h3>CADASTRE-SE EM NOSSA NEWSLETTER</h3>
+                <h4>e receba novidades e promoções da nossa loja</h4>
+            </div>
+
+            <div class="footer--compo-texto">
+                <div class="campo-texto">
+                    <input class="input-footer" type="email" placeholder="Digite seu email">
+                    <button class="button-footer">Cadastre-se</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-hr">
+            <hr class="footer-hr">
+        </div>
+
+        <div class="footer--rodape">
+            <div class="footer--midia">
+                <img src="../../img/logo.png" alt="logo rodape" class="logo-rodape">
+                <div class="footer--midia-redesociais">
+
+                    <img src="../../img/facebook.png" alt="facebook" class="footer-icons">
+
+                    <img src="../../img/instagram.png" alt="instagram" class="footer-icons">
+                </div>
+            </div>
+            <div class="footer--contatos">
+                <h4>Atendimento</h4>
+                <div class="footer--item-contato">
+                    <img src="../../img/celular.png" alt="celular" class="footer-icons">
+                    <p>(11) 997135477</p>
+                </div>
+                <div class="footer--item-contato">
+                    <img src="../../img/email.png" alt="email.png" class="footer-icons">
+                    <p>contato@wallyssonsousa.com.br</p>
+                </div>
+            </div>
+            <div class="footer--pagamento">
+                <h4>Formas de pagamento</h4>
+                <img src="../../img/lista-pagamentos.png" alt="lista-pagamentos">
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
