Começando a página contato

--- a/css/produto.css
+++ b/css/produto.css
@@ -161,10 +161,10 @@
 }
 
 .titulo-produto{
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 500;
     text-align: start;
-    color: #252525;
+    color: #3d3d3d;
 }
 
 .categoria-produtos{
