--- a/views/Produtos/index.html
+++ b/views/Produtos/index.html
@@ -28,7 +28,7 @@
                     <a href="views/Produtos/index.html">Produtos</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Contato</a>
+                    <a href="../Contato/index.html">Contato</a>
                 </li>
             </ul>
         </nav>
