--- a/views/Contato/index.html
+++ b/views/Contato/index.html
@@ -53,5 +53,14 @@
     <div class="container-hr">
         <hr class="hr-header">
     </div>
+
+    <section class="container-contatos">
+        <div class="form-contatos">
+            <h2 class="title">Fale conosco</h2>
+        </div>
+        <div class="divulgacao-contatos">
+
+        </div>
+    </section>
 </body>
 </html>
