esperando coragem pra terminar a página

--- a/views/Contato/index.html
+++ b/views/Contato/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="../../css/contato.css">
     <link rel="shortcut icon" href="../../img/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <header class="header">
 
@@ -56,11 +58,17 @@
 
     <section class="container-contatos">
         <div class="form-contatos">
-            <h2 class="title">Fale conosco</h2>
+            <h2 class="titulo">Fale conosco</h2>
+            <p class="semi-titulo">Precisa falar com a gente ? Utilize uma das opções abaixo para entrar em contato
+                conosco.</p>
+            <div class="container-form">
+
+            </div>
         </div>
         <div class="divulgacao-contatos">
 
         </div>
     </section>
 </body>
+
 </html>
