--- a/views/Contato/index.html
+++ b/views/Contato/index.html
@@ -58,11 +58,25 @@
 
     <section class="container-contatos">
         <div class="form-contatos">
-            <h2 class="titulo">Fale conosco</h2>
+            <h2 class="titulo-contato">Fale conosco</h2>
             <p class="semi-titulo">Precisa falar com a gente ? Utilize uma das opções abaixo para entrar em contato
                 conosco.</p>
             <div class="container-form">
+                <h3 class="titulo-form">Formulário de Contato</h3>
+                <p class="semi-titulo--form">Campos marcados com * são de preenchimento obrigatório.</p>
+                <form class="form">
+                    <label for="nome">*Nome:</label>
+                    <input type="text" name="nome" id="nome">
 
+                    <label for="email">*Email:</label>
+                    <input type="email" name="email" id="email">
+
+                    <label for="telefone">Telefone:</label>
+                    <input type="tel" name="telefone" id="telefone">
+
+                    <label for="assunto">Assunto</label>
+                    <input type="text" name="assunto" id="assunto">
+                </form>
             </div>
         </div>
         <div class="divulgacao-contatos">
