--- a/views/Produtos/index.html
+++ b/views/Produtos/index.html
@@ -34,7 +34,7 @@
         </nav>
 
         <div class="input-search">
-            <input class="input" type="search" placeholder="Faça sua pesquisa" />
+            <input class="input-header" type="search" placeholder="Faça sua pesquisa" />
             <img class="input-icon" src="../../img/procurar.png" alt="procurar">
         </div>
 
