--- a/views/Contato/index.html
+++ b/views/Contato/index.html
@@ -34,7 +34,7 @@
         </nav>
 
         <div class="input-search">
-            <input class="input" type="search" placeholder="Faça sua pesquisa" />
+            <input class="input-header" type="search" placeholder="Faça sua pesquisa" />
             <img class="input-icon" src="../../img/procurar.png" alt="procurar">
         </div>
 
@@ -65,24 +65,109 @@
                 <h3 class="titulo-form">Formulário de Contato</h3>
                 <p class="semi-titulo--form">Campos marcados com * são de preenchimento obrigatório.</p>
                 <form class="form">
-                    <label for="nome">*Nome:</label>
-                    <input type="text" name="nome" id="nome">
+                    <label class="label" for="nome">*Nome:</label>
+                    <input class="input" type="text" name="nome" id="nome">
 
-                    <label for="email">*Email:</label>
-                    <input type="email" name="email" id="email">
+                    <label class="label" for="email">*Email:</label>
+                    <input class="input" type="email" name="email" id="email">
 
-                    <label for="telefone">Telefone:</label>
-                    <input type="tel" name="telefone" id="telefone">
+                    <label class="label" for="telefone">Telefone:</label>
+                    <input class="input" type="tel" name="telefone" id="telefone">
 
-                    <label for="assunto">Assunto</label>
-                    <input type="text" name="assunto" id="assunto">
+                    <label class="label" for="assunto">Assunto</label>
+                    <input class="input" type="text" name="assunto" id="assunto">
+
+                    <label class="label" for="mensagem">*Mensagem</label>
+                    <textarea class="textarea" name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
+
+                    <button class="button-enviar">Enviar</button>
+
                 </form>
+
+
             </div>
         </div>
         <div class="divulgacao-contatos">
-
+            <div class="divulgacao-item">
+                <p class="titulo-divulgacao">Central de Atendimento ao Cliente</p>
+                <div class="divulgacao-container">
+                    <img src="../../img/celular.png" alt="icon-celular">
+                    <p class="divulgacao-text">(11)99713-5477</p>
+                </div>
+            </div>
+            <div class="divulgacao-item">
+                <p class="titulo-divulgacao">Atendimento Online</p>
+                <div class="divulgacao-container">
+                    <p class="divulgacao-text">Fale por WhatsApp.</p>
+                </div>
+            </div>
+            <div class="divulgacao-item">
+                <p class="titulo-divulgacao">Email</p>
+                <div class="divulgacao-container">
+                    <p class="divulgacao-text">contato@sabrinaModas.com.br</p>
+                </div>
+            </div>
+            <div class="divulgacao-item">
+                <p class="titulo-divulgacao">Dados da empresa</p>
+                <div class="divulgacao-container">
+                    <p class="divulgacao-text">CNPJ: </p>
+                </div>
+            </div>
+            <div class="divulgacao-item">
+                <p class="titulo-divulgacao">Endereço</p>
+                <div class="divulgacao-container">
+                    <p class="divulgacao-text">Sabrina Modas </p>
+                </div>
+            </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer--cabecalho">
+            <div class="footer--titulo-newsletter">
+                <h3>CADASTRE-SE EM NOSSA NEWSLETTER</h3>
+                <h4>e receba novidades e promoções da nossa loja</h4>
+            </div>
+
+            <div class="footer--compo-texto">
+                <div class="campo-texto">
+                    <input class="input-footer" type="email" placeholder="Digite seu email">
+                    <button class="button-footer">Cadastre-se</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-hr">
+            <hr class="footer-hr">
+        </div>
+
+        <div class="footer--rodape">
+            <div class="footer--midia">
+                <img src="../../img/logo.png" alt="logo rodape" class="logo-rodape">
+                <div class="footer--midia-redesociais">
+
+                    <img src="../../img/facebook.png" alt="facebook" class="footer-icons">
+
+                    <img src="../../img/instagram.png" alt="instagram" class="footer-icons">
+                </div>
+            </div>
+            <div class="footer--contatos">
+                <h4>Atendimento</h4>
+                <div class="footer--item-contato">
+                    <img src="../../img/celular.png" alt="celular" class="footer-icons">
+                    <p>(11) 997135477</p>
+                </div>
+                <div class="footer--item-contato">
+                    <img src="../../img/email.png" alt="email.png" class="footer-icons">
+                    <p>contato@wallyssonsousa.com.br</p>
+                </div>
+            </div>
+            <div class="footer--pagamento">
+                <h4>Formas de pagamento</h4>
+                <img src="../../img/lista-pagamentos.png" alt="lista-pagamentos">
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
