--- a/views/Pagamento/index.html
+++ b/views/Pagamento/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="container-produtos">
                         <h3 class="titulo-produtos">Dados do Produto</h3>
-                        
+
                         <input class="input" type="text" id="Tamanho" name="Tamanho" placeholder="Tamanho">
                         <input class="input" type="text" id="Quantidade" name="Quantidade" placeholder="Quantidade">
 
@@ -72,9 +72,15 @@
                         <input class="input" type="text" id="Telefone" name="Telefone"
                             placeholder="Telefone para contato">
                     </div>
+
+                </div>
+
+                <div class="container-button">
+                    <button class="button-finalizar">Finalizar</button>
                 </div>
 
             </div>
+
         </div>
 
     </main>
