--- a/views/Produtos/index.html
+++ b/views/Produtos/index.html
@@ -96,7 +96,7 @@
                             <p class="preco-card">R$ 80,00</p>
                         </div>
                     </div>
-                    <button class="add-carrinho">Adicione</button>
+                    <a class="add-carrinho" href="../Pagamento/index.html">Adicione</a>
                 </div>
                 <div class="card">
 
